# stockout-mas

./: README.md  pyproject.toml
docs/: agent-roster.md  architecture.md  comms-contract.md  coordination.md  evaluation.md  incentives.md  safety-governance.md  system-brief.md
outputs/: metrics.json  sample_audit_governed.jsonl
src/stockout_mas/: __init__.py  audit.py  blackboard.py  config.py  messages.py  orchestrator.py  run.py
src/stockout_mas/agents/: __init__.py  approver.py  base.py  demand.py  inventory.py  pricing.py  supplier.py
src/stockout_mas/eval/: metrics.py  run_eval.py  stress.py
src/stockout_mas/sim/: environment.py  scenarios.py
tests/: test_system.py
