[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stockout-mas"
version = "0.1.0"
description = "Runnable multi-agent supply-chain stockout response prototype with coordination, governance, and evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
plots = ["matplotlib>=3.6"]
dev = ["pytest>=7.0"]

[project.scripts]
stockout-mas = "stockout_mas.run:main"

[tool.setuptools.packages.find]
where = ["src"]
